# VINS-Fusion_comment

./: CMakeLists.txt  algorithms.docx  framework.eddx
camera_models/src/camera_models/: PinholeCamera.cc
global_fusion/src/: globalOptNode.cpp
loop_fusion/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  utility.h
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_alignment.h  initial_ex_rotation.cpp
vins_estimator/src/utility/: CameraPoseVisualization.cpp  utility.h  visualization.cpp
